# OBSIDIAN-CLIENT_tauri

./: README.md  package.json
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
