[package]
name = "obsidian-client"
version = "0.0.1"
description = "High-performance client for Kirka.io"
authors = ["you"]
license = ""
repository = ""
default-run = "obsidian-client"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = [ "window-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
