[package]
name = "obsidian-client"
version = "0.0.1"
description = "High-performance client for Kirka.io"
authors = ["imnotkoolkid"]
license = ""
repository = ""
default-run = "obsidian-client"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [] }

[features]
default = []
